# Stellar-Tipz

./: PR_DESCRIPTION_341.md  fix-contrast.js  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: mutation-testing.yml
backend/: Makefile  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
backend/docs/: BACKEND_CONTRIBUTING.md  DATA_MODEL.md
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.ts  server.ts
backend/src/config/: env.ts  index.ts
backend/src/db/: redis.ts
backend/src/docs/: openapi.ts
backend/src/indexer/: cursor.store.ts  event-log.store.ts  index.ts  indexer.test.ts  (+4 more)
backend/tests/: auth.test.ts  config.test.ts  docs.test.ts  health.test.ts  lifecycle.test.ts  ttl-validation.test.ts
contracts/: Cargo.toml
contracts/tipz/src/: credit.rs  events.rs  lib.rs  stats.rs  streaks.rs
contracts/tipz/src/test/: mod.rs  test_benchmark.rs  test_budget.rs  test_credit.rs  test_events.rs  test_integration_advanced.rs  test_leaderboard.rs  test_multisig.rs  test_mutation_coverage.rs  test_property.rs  test_security.rs  test_storage.rs  test_streaks.rs
docs/: MUTATION_TESTING.md  PERFORMANCE.md
frontend-scaffold/: index.html  package-lock.json  package.json  tailwind.config.js
frontend-scaffold/reports/: accessibility.json
frontend-scaffold/scripts/: analyze-bundle.mjs
frontend-scaffold/src/: App.tsx  index.scss  index.tsx
scripts/: load-test.js
(+153 files in other folders)
